# sgt-lib

./: .gitignore  CMakeLists.txt  main.cpp  sgt.hpp
Faction/: CMakeLists.txt
Faction/include/: Faction.hpp
Faction/src/: Faction.cpp
HexMap/: CMakeLists.txt
HexMap/include/: Hex.hpp  HexMap.hpp
HexMap/src/: Hex.cpp  HexMap.cpp
MapRegion/: CMakeLists.txt
MapRegion/include/: MapRegion.hpp
MapRegion/src/: MapRegion.cpp
Sector/: CMakeLists.txt
Sector/include/: Sector.hpp
Sector/src/: Sector.cpp
Tests/: CMakeLists.txt
Tests/src/: FactionTests.cpp  HexMapTests.cpp  MapRegionTests.cpp  SectorTests.cpp  Tests.cpp
Utils/: CMakeLists.txt
Utils/include/: Random.hpp
Utils/src/: Random.cpp
cmake/: Findcatch.cmake
